# shardagnostic-network

./: README.md  bors.toml  cabal.project  cabal.project.local.ci  cabal.project.local.github-pages  default.nix  flake.nix  release.nix  shell.nix
bcc-client/: bcc-client.cabal
io-classes/: README.md  (+1 more)
shardagnostic-consensus/: README.md  shardagnostic-consensus.cabal
shardagnostic-consensus-bcc/: README.md  shardagnostic-consensus-bcc.cabal
shardagnostic-consensus-bcc-test/: README.md  shardagnostic-consensus-bcc-test.cabal
shardagnostic-consensus-bcc-test/src/Test/Consensus/Bcc/: Examples.hs  Generators.hs  MockCrypto.hs
shardagnostic-consensus-bcc-test/src/Test/ThreadNet/Infra/: SophieBasedHardFork.hs  TwoEras.hs
shardagnostic-consensus-bcc-test/src/Test/ThreadNet/TxGen/: Aurum.hs  Bcc.hs  Evie.hs  Jen.hs
shardagnostic-consensus-bcc-test/test/: Main.hs
shardagnostic-consensus-bcc-test/test/Test/Consensus/Bcc/: ColeCompatibility.hs  Golden.hs  Serialisation.hs
shardagnostic-consensus-bcc-test/test/Test/ThreadNet/: Bcc.hs  EvieJen.hs  JenAurum.hs  SophieEvie.hs
shardagnostic-consensus-bcc-test/test/golden/BccNodeToNodeVersion1/: GenTxId_Evie  GenTx_Sophie
shardagnostic-consensus-bcc-test/test/golden/BccNodeToNodeVersion2/: SerialisedHeader_Evie
shardagnostic-consensus-bcc-test/test/golden/BccNodeToNodeVersion4/: SerialisedBlock_Evie
shardagnostic-consensus-bcc-test/test/golden/TopLevelQueryDisabled/BccNodeToClientVersion1/: ApplyTxErr_Jen  Query_Aurum_GetLedgerTip
shardagnostic-consensus-bcc-test/test/golden/TopLevelQueryDisabled/BccNodeToClientVersion2/: Query_Sophie_GetGenesisConfig
shardagnostic-consensus-bcc-test/test/golden/TopLevelQueryDisabled/BccNodeToClientVersion4/: GenTx_Jen
shardagnostic-consensus-bcc-test/test/golden/TopLevelQueryDisabled/BccNodeToClientVersion5/: Result_Aurum_ProposedPParamsUpdates
shardagnostic-consensus-bcc/src/Shardagnostic/Consensus/: Bcc.hs
shardagnostic-consensus-bcc/src/Shardagnostic/Consensus/Bcc/: Block.hs  CanHardFork.hs  ColeHFC.hs  Condense.hs  Node.hs  SophieBased.hs
shardagnostic-consensus-bcc/tools/db-analyser/: Analysis.hs  HasAnalysis.hs  Main.hs
shardagnostic-consensus-bcc/tools/db-analyser/Block/: Aurum.hs  Bcc.hs  Cole.hs  Sophie.hs
shardagnostic-consensus-cole/: README.md  shardagnostic-consensus-cole.cabal
shardagnostic-consensus-cole-test/: README.md  shardagnostic-consensus-cole-test.cabal
shardagnostic-consensus-cole-test/src/Shardagnostic/Consensus/ColeDual/: Ledger.hs  Node.hs
shardagnostic-consensus-cole-test/src/Test/Consensus/Cole/: Examples.hs  Generators.hs
shardagnostic-consensus-cole-test/src/Test/ThreadNet/Infra/: Cole.hs
shardagnostic-consensus-cole-test/src/Test/ThreadNet/TxGen/: Cole.hs
shardagnostic-consensus-cole-test/test/: Main.hs
shardagnostic-consensus-cole-test/test/Test/Consensus/Cole/: Golden.hs  Serialisation.hs
shardagnostic-consensus-cole-test/test/Test/ThreadNet/: Cole.hs  DualCole.hs
shardagnostic-consensus-cole/tools/db-converter/: Main.hs
shardagnostic-consensus-colespec/: shardagnostic-consensus-colespec.cabal
shardagnostic-consensus-mock/: README.md  shardagnostic-consensus-mock.cabal
shardagnostic-consensus-mock-test/: README.md  shardagnostic-consensus-mock-test.cabal
shardagnostic-consensus-mock-test/test/: Main.hs
shardagnostic-consensus-mock-test/test/Test/ThreadNet/: BFT.hs  LeaderSchedule.hs  Optimum.hs  PBFT.hs
shardagnostic-consensus-sophie/: README.md  shardagnostic-consensus-sophie.cabal
shardagnostic-consensus-sophie-test/: README.md  shardagnostic-consensus-sophie-test.cabal
shardagnostic-consensus-sophie-test/test/: Main.hs
shardagnostic-consensus-sophie-test/test/Test/ThreadNet/: Sophie.hs
shardagnostic-consensus-test/: shardagnostic-consensus-test.cabal
shardagnostic-consensus-test/src/Test/ThreadNet/: General.hs  Network.hs  Rekeying.hs  TxGen.hs  Util.hs
shardagnostic-consensus-test/src/Test/Util/: ChunkInfo.hs  FileLock.hs  LogicalClock.hs  MockChain.hs  Nightly.hs  Paths.hs  QuickCheck.hs  Range.hs  TestBlock.hs  Tracer.hs
shardagnostic-consensus-test/test-consensus/: Main.hs
shardagnostic-consensus-test/test-consensus/Test/Consensus/: Mempool.hs  Node.hs  ResourceRegistry.hs
shardagnostic-consensus-test/test-storage/: Main.hs
shardagnostic-consensus-test/test-storage/Test/Shardagnostic/: Storage.hs
shardagnostic-consensus/docs/: AddingAnEra.md  Contributing.md  GitProcess.md  Onboarding.md  StyleGuide.md  TBCOOnboarding.md  Testing.md  config-CODEOWNERS.md  interface-CHANGELOG.md
shardagnostic-consensus/docs/report/: references.bib  report.dict  report.tex
shardagnostic-consensus/docs/report/presentations/: genesis-2.0.tex
shardagnostic-consensus/docs/report/unsoundswitch/: unsoundswitch.cabal
shardagnostic-consensus/src/Shardagnostic/Consensus/: Block.hs  BlockchainTime.hs  Config.hs  Forecast.hs  HeaderStateHistory.hs  HeaderValidation.hs  Mempool.hs  Node.hs  NodeId.hs  NodeKernel.hs  Ticked.hs  TypeFamilyWrappers.hs  Util.hs
shardagnostic-network/: ChangeLog.md  shardagnostic-network.cabal
shardagnostic-network-testing/: ChangeLog.md  shardagnostic-network-testing.cabal
shardagnostic-network/demo/: chain-sync.hs
shardagnostic-network/protocol-tests/Test/: ChainGenerators.hs  ChainProducerState.hs
shardagnostic-network/src/Shardagnostic/Network/: AnchoredFragment.hs  AnchoredSeq.hs  Block.hs  BlockFetch.hs  Counter.hs  DeltaQ.hs  Diffusion.hs  KeepAlive.hs  Magic.hs  NodeToClient.hs  NodeToNode.hs  Point.hs  Tracers.hs
shardagnostic-network/test/: Main.hs
shardagnostic-network/test-cddl/: Main.hs
shardagnostic-network/test-cddl/specs/: block-fetch.cddl  local-state-query.cddl  local-tx-submission.cddl  tx-submission.cddl  tx-submission2.cddl
shardagnostic-network/test/Shardagnostic/Network/: MockNode.hs
shardagnostic-network/test/Test/: AnchoredFragment.hs  Chain.hs  LedgerPeers.hs  Mux.hs  PeerState.hs  Pipe.hs  Socket.hs  Version.hs
shardagnostic-network/wireshark-plugin/: README  shardagnostic_network.lua
typed-protocols/: typed-protocols.cabal
(+546 files in other folders)
