name:                  shardagnostic-consensus-bcc
version:               0.1.0.0
synopsis:              The instantation of the Shardagnostic consensus layer used by Bcc
-- description:
license:               Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:             2021 The-Blockchain-Company
author:                TBCO Engineering Team
maintainer:            operations@tbco.io
category:              Network
build-type:            Simple
cabal-version:         >=1.10

source-repository head
  type:     git
  location: https://github.com/The-Blockchain-Company/shardagnostic-network

flag asserts
  description: Enable assertions
  manual:      False
  default:     False

library
  hs-source-dirs:      src
  exposed-modules:
                       Shardagnostic.Consensus.Bcc
                       Shardagnostic.Consensus.Bcc.Block
                       Shardagnostic.Consensus.Bcc.ColeHFC
                       Shardagnostic.Consensus.Bcc.Condense
                       Shardagnostic.Consensus.Bcc.CanHardFork
                       Shardagnostic.Consensus.Bcc.Node
                       Shardagnostic.Consensus.Bcc.SophieBased

  build-depends:       base              >=4.9   && <4.15
                     , bytestring        >=0.10  && <0.11
                     , cborg             >=0.2.2 && <0.3
                     , containers        >=0.5   && <0.7
                     , mtl               >=2.2   && <2.3
                     , nothunks
                     , these             >=1.1   && <1.2

                     , bcc-binary
                     , bcc-crypto-class
                     , bcc-ledger-aurum
                     , bcc-ledger-cole
                     , bcc-ledger-core
                     , bcc-prelude
                     , bcc-slotting
                     , sophie-spec-ledger
                     , bcc-ledger-sophie-ma

                     , shardagnostic-network
                     , shardagnostic-consensus
                     , shardagnostic-consensus-cole
                     , shardagnostic-consensus-sophie

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
  if flag(asserts)
    ghc-options:       -fno-ignore-asserts

executable db-analyser
  hs-source-dirs:      tools/db-analyser
  main-is:             Main.hs
  build-depends:       aeson
                     , base
                     , bytestring
                     , bcc-binary
                     , bcc-crypto-wrapper
                     , bcc-ledger-aurum
                     , bcc-ledger-cole
                     , bcc-ledger-core
                     , containers
                     , contra-tracer
                     , mtl
                     , optparse-applicative
                     , sophie-spec-ledger
                     , strict-containers
                     , text

                     , shardagnostic-consensus
                     , shardagnostic-consensus-cole
                     , shardagnostic-consensus-bcc
                     , shardagnostic-consensus-sophie
                     , shardagnostic-network
                     , zerepoch-ledger-api
  other-modules:
                       Analysis
                     , Block.Aurum 
                     , Block.Cole
                     , Block.Bcc
                     , Block.Sophie
                     , HasAnalysis
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -threaded
                       -rtsopts
                       "-with-rtsopts=-T -I0 -N2 -A16m"
