name:                  shardagnostic-consensus-cole
version:               0.1.0.0
synopsis:              Cole ledger integration in the Shardagnostic consensus layer
-- description:
license:               Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:             2021 The-Blockchain-Company
author:                TBCO Engineering Team
maintainer:            operations@blockchain-company.io
category:              Network
build-type:            Simple
cabal-version:         >=1.10

source-repository head
  type:     git
  location: https://github.com/The-Blockchain-Company/shardagnostic-network

flag asserts
  description: Enable assertions
  manual:      False
  default:     False

library
  hs-source-dirs:      src

  exposed-modules:
                       Shardagnostic.Consensus.Cole.Crypto.DSIGN
                       Shardagnostic.Consensus.Cole.EBBs
                       Shardagnostic.Consensus.Cole.Ledger
                       Shardagnostic.Consensus.Cole.Ledger.Block
                       Shardagnostic.Consensus.Cole.Ledger.Config
                       Shardagnostic.Consensus.Cole.Ledger.Conversions
                       Shardagnostic.Consensus.Cole.Ledger.Forge
                       Shardagnostic.Consensus.Cole.Ledger.HeaderValidation
                       Shardagnostic.Consensus.Cole.Ledger.Inspect
                       Shardagnostic.Consensus.Cole.Ledger.Integrity
                       Shardagnostic.Consensus.Cole.Ledger.Ledger
                       Shardagnostic.Consensus.Cole.Ledger.Mempool
                       Shardagnostic.Consensus.Cole.Ledger.NetworkProtocolVersion
                       Shardagnostic.Consensus.Cole.Ledger.Orphans
                       Shardagnostic.Consensus.Cole.Ledger.PBFT
                       Shardagnostic.Consensus.Cole.Ledger.Serialisation
                       Shardagnostic.Consensus.Cole.Node
                       Shardagnostic.Consensus.Cole.Node.Serialisation
                       Shardagnostic.Consensus.Cole.Protocol

  build-depends:       base              >=4.9   && <4.15
                     , bytestring        >=0.10  && <0.11
                     , bcc-binary
                     , bcc-crypto
                     , bcc-crypto-class
                     , bcc-crypto-wrapper
                     , bcc-ledger-cole
                     , bcc-prelude
                     , bcc-slotting
                     , cborg             >=0.2.2 && <0.3
                     , containers        >=0.5   && <0.7
                     , cryptonite        >=0.25  && <0.28
                     , formatting        >=6.3   && <6.4
                     , mtl               >=2.2   && <2.3
                     , serialise         >=0.2   && <0.3
                     , nothunks
                     , text              >=1.2   && <1.3

                     , shardagnostic-network
                     , shardagnostic-consensus

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
  if flag(asserts)
    ghc-options:       -fno-ignore-asserts

executable db-converter
  hs-source-dirs:      tools/db-converter
  main-is:             Main.hs
  build-depends:       base
                     , bytestring
                     , bcc-binary
                     , bcc-ledger-cole
                     , directory
                     , filepath
                     , mtl
                     , optparse-generic
                     , resourcet
                     , streaming
                     , text

                     , shardagnostic-network
                     , shardagnostic-consensus
                     , shardagnostic-consensus-cole

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
