name:                  shardagnostic-consensus-colespec
version:               0.1.0.0
synopsis:              ColeSpec ledger integration in the Shardagnostic consensus layer
-- description:
license:               Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:             2021 The-Blockchain-Company
author:                TBCO Engineering Team
maintainer:            operations@tbco.io
category:              Network
build-type:            Simple
cabal-version:         >=1.10

source-repository head
  type:     git
  location: https://github.com/The-Blockchain-Company/shardagnostic-network

library
  hs-source-dirs:      src

  exposed-modules:
                       Shardagnostic.Consensus.ColeSpec.Ledger
                       Shardagnostic.Consensus.ColeSpec.Ledger.Accessors
                       Shardagnostic.Consensus.ColeSpec.Ledger.Block
                       Shardagnostic.Consensus.ColeSpec.Ledger.Conversions
                       Shardagnostic.Consensus.ColeSpec.Ledger.Forge
                       Shardagnostic.Consensus.ColeSpec.Ledger.Genesis
                       Shardagnostic.Consensus.ColeSpec.Ledger.GenTx
                       Shardagnostic.Consensus.ColeSpec.Ledger.Ledger
                       Shardagnostic.Consensus.ColeSpec.Ledger.Mempool
                       Shardagnostic.Consensus.ColeSpec.Ledger.Orphans
                       Shardagnostic.Consensus.ColeSpec.Ledger.Rules

  build-depends:       base              >=4.9   && <4.15
                     , bimap             >=0.3   && <0.5
                     , bcc-binary
                     , bcc-ledger-cole-test
                     , bcc-slotting
                     , cborg             >=0.2.2 && <0.3
                     , containers        >=0.5   && <0.7
                     , cole-spec-chain
                     , cole-spec-ledger
                     , mtl               >=2.2   && <2.3
                     , nothunks
                     , serialise         >=0.2   && <0.3
                     , small-steps
                     , transformers

                     , shardagnostic-network
                     , shardagnostic-consensus

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
