name:                shardagnostic-consensus-mock-test
version:             0.1.0.0
synopsis:            Tests of the mock ledger integration in the Shardagnostic consensus layer
-- description:
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:           2021 The-Blockchain-Company
author:              TBCO Engineering Team
maintainer:          operations@tbco.io
category:            Network
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/The-Blockchain-Company/shardagnostic-network

library
  hs-source-dirs:      src

  exposed-modules:
                       Test.Consensus.Ledger.Mock.Generators

                       Test.ThreadNet.TxGen.Mock
                       Test.ThreadNet.Util.HasCreator.Mock
                       Test.ThreadNet.Util.SimpleBlock

  build-depends:       base              >=4.9   && <4.15
                     , bytestring        >=0.10  && <0.11
                     , bcc-crypto-class
                     , containers        >=0.5   && <0.7
                     , serialise         >=0.2   && <0.3
                     , QuickCheck
                     , shardagnostic-consensus
                     , shardagnostic-consensus-mock
                     , shardagnostic-consensus-test

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -Wno-unticked-promoted-constructors
                       -fno-ignore-asserts

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:
                       Test.Consensus.Ledger.Mock

                       Test.ThreadNet.BFT
                       Test.ThreadNet.LeaderSchedule
                       Test.ThreadNet.PBFT
                       Test.ThreadNet.Optimum

  build-depends:       base
                     , bytestring
                     , bcc-slotting
                     , cborg
                     , containers
                     , QuickCheck
                     , serialise
                     , tasty
                     , tasty-quickcheck

                     , shardagnostic-network
                     , shardagnostic-consensus
                     , shardagnostic-consensus-mock
                     , shardagnostic-consensus-mock-test
                     , shardagnostic-consensus-test

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -fno-ignore-asserts
                       -threaded
                       -rtsopts
