name:                  shardagnostic-consensus-sophie
version:               0.1.0.0
synopsis:              Sophie ledger integration in the Shardagnostic consensus layer
-- description:
license:               Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:             2021 The-Blockchain-Company
author:                TBCO Engineering Team
maintainer:            operations@blockchain-company.io
category:              Network
build-type:            Simple
cabal-version:         >=1.10

source-repository head
  type:     git
  location: https://github.com/The-Blockchain-Company/shardagnostic-network

flag asserts
  description: Enable assertions
  manual:      False
  default:     False

library
  hs-source-dirs:      src

  exposed-modules:
                       Shardagnostic.Consensus.Sophie.Eras
                       Shardagnostic.Consensus.Sophie.Ledger
                       Shardagnostic.Consensus.Sophie.Ledger.Block
                       Shardagnostic.Consensus.Sophie.Ledger.Config
                       Shardagnostic.Consensus.Sophie.Ledger.Forge
                       Shardagnostic.Consensus.Sophie.Ledger.Inspect
                       Shardagnostic.Consensus.Sophie.Ledger.Integrity
                       Shardagnostic.Consensus.Sophie.Ledger.Ledger
                       Shardagnostic.Consensus.Sophie.Ledger.Mempool
                       Shardagnostic.Consensus.Sophie.Ledger.NetworkProtocolVersion
                       Shardagnostic.Consensus.Sophie.Ledger.Query
                       Shardagnostic.Consensus.Sophie.Ledger.PeerSelection
                       Shardagnostic.Consensus.Sophie.Ledger.TOptimum
                       Shardagnostic.Consensus.Sophie.Node
                       Shardagnostic.Consensus.Sophie.Node.Serialisation
                       Shardagnostic.Consensus.Sophie.Protocol
                       Shardagnostic.Consensus.Sophie.Protocol.HotKey
                       Shardagnostic.Consensus.Sophie.Protocol.Util
                       Shardagnostic.Consensus.Sophie.SophieBased
                       Shardagnostic.Consensus.Sophie.SophieHFC

  build-depends:       base              >=4.9   && <4.15
                     , base-deriving-via
                     , bytestring        >=0.10  && <0.11
                     , bcc-binary
                     , bcc-crypto-class
                     , bcc-ledger-core
                     , bcc-protocol-toptimum
                     , bcc-slotting
                     , cborg             >=0.2.2 && <0.3
                     , containers        >=0.5   && <0.7
                     , data-default-class
                     , measures
                     , mtl               >=2.2   && <2.3
                     , nothunks
                     , orphans-deriving-via
                     , serialise         >=0.2   && <0.3
                     , strict-containers
                     , text              >=1.2   && <1.3
                     , transformers

                       -- bcc-ledger-specs
                     , bcc-ledger-aurum
                     , bcc-ledger-sophie-ma
                     , sophie-spec-ledger
                     , small-steps

                     , shardagnostic-network
                     , shardagnostic-consensus

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
  if flag(asserts)
    ghc-options:       -fno-ignore-asserts
